rs_utils: updated to use core attributes

--- a/templates/default/collectd.config.erb
+++ b/templates/default/collectd.config.erb
@@ -2,7 +2,7 @@
 # Config file for collectd, version 4.
 # Prepared by RightScale for EC2 instances.
 #
-Hostname  "<%= @node[:cloud][:instance_uid]  %>"
+Hostname  "<%= @node[:rightscale][:instance_uuid]  %>"
 BaseDir   "/var/lib/collectd"
 PIDFile   "/var/run/collectd.pid"
 PluginDir "<%= @node[:rs_utils][:collectd_lib] %>"
@@ -11,7 +11,7 @@ Interval  10
 ReadThreads 5
 LoadPlugin network
 <Plugin network>
-  Server "<%= @node[:rightscale][:server][:sketchy] %>" "3011"
+  Server "<%= @node[:rightscale][:servers][:sketchy][:hostname] %>" "3011"
 </Plugin>
 LoadPlugin cpu
 LoadPlugin df
