--- a/templates/default/syslog.erb
+++ b/templates/default/syslog.erb
@@ -36,7 +36,7 @@ destination d_hpxy { file("/var/log/httpd/haproxy.log"); };
 #destination d_https { file("/var/log/httpd/https.log"); };
 destination d_httperror { file("/var/log/httpd/error_log"); };
 destination d_dhcp { pipe("/dev/null.syslog-ng"); };
-destination d_udp { udp("<%= @node[:rightscale][:servers][:lumberjack][:hostname] %>" template("<$PRI>$DATE <%= @node[:rightscale][:servers][:lumberjack][:identifier] %>  $MSG")); }; 
+destination d_udp { udp("<%= node[:rightscale][:servers][:lumberjack][:hostname] %>" template("<$PRI>$DATE <%= node[:rightscale][:servers][:lumberjack][:identifier] %>  $MSG")); }; 
 
 #
 # fun stuff
