--- a/templates/default/processes.conf.erb
+++ b/templates/default/processes.conf.erb
@@ -1,4 +1,6 @@
-LoadPlugin Processes
+# The processes plugin is already loaded in the collectd.config file.  Specifying it again here results in
+# collectd sending the processes information to the Syslog server twice, and lots of thrash in /var/log/messages
+#LoadPlugin Processes
 <Plugin processes>
   process "collectd"
 <% node[:rs_utils][:process_list].split.each do |process| %>
