Make enabling collectd plugins and monitoring processes into definitions
Forgot to set defaults and merge the dashboard instance into the arrays

--- a/templates/default/collectd.config.erb
+++ b/templates/default/collectd.config.erb
@@ -10,7 +10,7 @@ TypesDB   "<%= node[:rs_utils][:collectd_lib] %>/types.db"
 Interval  10
 ReadThreads 5
 
-<% node[:rs_utils][:plugin_list].split.each do |plugin| -%>
+<% node[:rs_utils][:plugin_list_ary].each do |plugin| -%>
 LoadPlugin <%= plugin %>
 <% end %>
 
