[ALL] WIP adding license/copyright to all files

--- a/templates/default/hosts.erb
+++ b/templates/default/hosts.erb
@@ -1,3 +1,14 @@
+# 
+# Cookbook Name:: rs_utils
+#
+# Copyright RightScale, Inc. All rights reserved.  All access and use subject to the
+# RightScale Terms of Service available at http://www.rightscale.com/terms.php and,
+# if applicable, other agreements such as a RightScale Master Subscription Agreement.
+# 
+# Managed by RightScale
+# DO NOT EDIT BY HAND
+#
+
 127.0.0.1			localhost localhost.localdomain
 <%= @node_ip %>			<%= @hosts_list %>
 
