--- a/templates/default/collectd.config.erb
+++ b/templates/default/collectd.config.erb
@@ -1,8 +1,16 @@
+# 
+# Cookbook Name:: rs_utils
 #
-# Config file for collectd, version 4.
-#
+# Copyright RightScale, Inc. All rights reserved.  All access and use subject to the
+# RightScale Terms of Service available at http://www.rightscale.com/terms.php and,
+# if applicable, other agreements such as a RightScale Master Subscription Agreement.
+# 
 # Managed by RightScale
 # DO NOT EDIT BY HAND
+#
+
+#
+# Config file for collectd, version 4.
 #
 Hostname  "<%= node[:rightscale][:instance_uuid]  %>"
 Interval  20
