--- a/templates/default/file-stats.conf.erb
+++ b/templates/default/file-stats.conf.erb
@@ -1,3 +1,14 @@
+# 
+# Cookbook Name:: rs_utils
+#
+# Copyright RightScale, Inc. All rights reserved.  All access and use subject to the
+# RightScale Terms of Service available at http://www.rightscale.com/terms.php and,
+# if applicable, other agreements such as a RightScale Master Subscription Agreement.
+# 
+# Managed by RightScale
+# DO NOT EDIT BY HAND
+#
+
 <Plugin exec>
   #    userid    plugin executable                   plugin args
   Exec "nobody" "<%= node[:rs_utils][:collectd_lib] %>/plugins/file-stats.rb" "-h" "<%= node[:rightscale][:instance_uuid] %>" "-i" "20" "<%= node[:rs_utils][:db_backup_file] %>"
