--- a/templates/default/processes.conf.erb
+++ b/templates/default/processes.conf.erb
@@ -1,7 +1,14 @@
+# 
+# Cookbook Name:: rs_utils
 #
+# Copyright RightScale, Inc. All rights reserved.  All access and use subject to the
+# RightScale Terms of Service available at http://www.rightscale.com/terms.php and,
+# if applicable, other agreements such as a RightScale Master Subscription Agreement.
+# 
 # Managed by RightScale
 # DO NOT EDIT BY HAND
 #
+
 <Plugin processes>
   process "collectd"
 <% node[:rs_utils][:process_list_ary].each do |process| %>
