--- a/templates/default/syslog.erb
+++ b/templates/default/syslog.erb
@@ -1,9 +1,17 @@
+# 
+# Cookbook Name:: rs_utils
+#
+# Copyright RightScale, Inc. All rights reserved.  All access and use subject to the
+# RightScale Terms of Service available at http://www.rightscale.com/terms.php and,
+# if applicable, other agreements such as a RightScale Master Subscription Agreement.
+# 
+# Managed by RightScale
+# DO NOT EDIT BY HAND
+#
+
 # syslog-ng configuration file.
 #
 # See syslog-ng(8) and syslog-ng.conf(5) for more information.
-#
-# Managed by RightScale
-# DO NOT EDIT BY HAND
 #
 
 options {
