[rs_utils::setup_logging] syslog will be setup regardless of cloud.  only ec2 will log to lumberjack hosts.

--- a/templates/default/syslog.erb
+++ b/templates/default/syslog.erb
@@ -50,7 +50,9 @@ destination d_hpxy { file("/var/log/<%= @apache_log_dir %>/haproxy.log"); };
 #destination d_https { file("/var/log/<%= @apache_log_dir %>/https.log"); };
 destination d_httperror { file("/var/log/<%= @apache_log_dir %>/error_log"); };
 destination d_dhcp { pipe("/dev/null.syslog-ng"); };
+<% if node[:rightscale][:servers][:lumberjack][:hostname] != "" && node[:rs_utils][:enable_remote_logging] == true -%>
 destination d_udp { udp("<%= node[:rightscale][:servers][:lumberjack][:hostname] %>" template("<$PRI>$DATE <%= node[:rightscale][:servers][:lumberjack][:identifier] %>  $MSG")); }; 
+<% end -%>
 
 #
 # fun stuff
@@ -64,9 +66,11 @@ log           { source(s_sys); filter(f_daem); destination(d_daem); };
 # HAproxy should log to facility local2
 filter f_hpxy { facility(local2); };
 log           { source(s_sys); filter(f_hpxy); destination(d_hpxy); };
+<% if node[:rightscale][:servers][:lumberjack][:hostname] != "" && node[:rs_utils][:enable_remote_logging] == true -%>
 # Ship (almost) everything to central syslog system 
 filter f_udp  { not facility(authpriv) or (program(dhclient) and match(DHCPREQUEST)); };
 log           { source(s_sys); filter(f_udp); destination(d_udp); };
+<% end -%>
 # Messages -- need to exclude everything else
 filter f_mesg { level(info..emerg) and
                 not (facility(mail,authpriv,cron,local0,local1,local2,local3) or
